# MikeTeaManage

./: .gitignore  build.gradle  settings.gradle
SerialPortLibrary/src/main/: AndroidManifest.xml
SerialPortLibrary/src/main/java/android_serialport_api/: SerialPortFinder.java
SerialProtLibrary/: CMakeLists.txt  build.gradle
SerialProtLibrary/src/androidTest/java/com/xlk/serialprotlibrary/: ExampleInstrumentedTest.java
SerialProtLibrary/src/main/java/android_serialport_api/: SerialPort.java
SerialProtLibrary/src/main/java/com/xlk/serialprotlibrary/utils/: SerialHelper.java
SerialProtLibrary/src/test/java/com/xlk/serialprotlibrary/: ExampleUnitTest.java
app/: build.gradle
app/keystore/: release.keystore
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: common_slide_in_left.xml  common_slide_in_right.xml  common_slide_out_left.xml  common_slide_out_right.xml  open_enter.xml  open_exit.xml
app/src/main/res/drawable/: ripple_button.xml  round_bg.xml
app/src/main/res/layout/: activity_clean.xml  activity_config.xml  activity_main.xml  activity_password.xml  activity_play_view.xml  activity_product.xml  activity_product_setup.xml  dividing_line.xml  item_product_layout.xml  lock_screen_layout.xml  modify_password_layout.xml  pop_layout.xml  single_play_layout.xml  top_view.xml
app/src/main/res/values/: attr.xml  colors.xml  strings.xml  styles.xml  themes.xml  values.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+46 files in other folders)
